k8s/parties-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parties-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parties
  template:
    metadata:
      labels:
        app: parties
    spec:
      containers:
        - name: parties
          image: abhithube/chatterbox-parties
          resources:
            requests:
              memory: '128Mi'
              cpu: '100m'
            limits:
              memory: '256Mi'
              cpu: '200m'
