k8s/profiles-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profiles-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profiles
  template:
    metadata:
      labels:
        app: profiles
    spec:
      containers:
        - name: profiles
          image: abhithube/chatterbox-profiles
          resources:
            requests:
              memory: '128Mi'
              cpu: '100m'
            limits:
              memory: '256Mi'
              cpu: '200m'
