k8s/accounts-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounts
  template:
    metadata:
      labels:
        app: accounts
    spec:
      containers:
        - name: accounts
          image: abhithube/chatterbox-accounts
          resources:
            requests:
              memory: '128Mi'
              cpu: '100m'
            limits:
              memory: '256Mi'
              cpu: '200m'
---
apiVersion: v1
kind: Service
metadata:
  name: accounts-svc
spec:
  type: ClusterIP
  selector:
    app: accounts
  ports:
    - name: accounts
      protocol: TCP
      port: 80
      targetPort: 80
