k8s/contact-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contact-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contact
  template:
    metadata:
      labels:
        app: contact
    spec:
      containers:
        - name: contact
          image: abhithube/chatterbox-contact
          resources:
            requests:
              memory: '128Mi'
              cpu: '100m'
            limits:
              memory: '256Mi'
              cpu: '200m'
---
apiVersion: v1
kind: Service
metadata:
  name: contact-svc
spec:
  type: ClusterIP
  selector:
    app: contact
  ports:
    - name: contact
      protocol: TCP
      port: 80
      targetPort: 80
