k8s/contact-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: contact-svc
spec:
  type: ClusterIP
  selector:
    app: contact
  ports:
    - name: contact
      protocol: TCP
      port: 80
      targetPort: 80
