k8s/parties-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: parties-svc
spec:
  type: ClusterIP
  selector:
    app: parties
  ports:
    - name: parties
      protocol: TCP
      port: 80
      targetPort: 80
