k8s/profiles-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: profiles-svc
spec:
  type: ClusterIP
  selector:
    app: profiles
  ports:
    - name: profiles
      protocol: TCP
      port: 80
      targetPort: 80
