k8s/profiles.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profiles-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profiles
  template:
    metadata:
      labels:
        app: profiles
    spec:
      containers:
        - name: profiles
          image: abhithube/chatterbox-profiles
          resources:
            requests:
              memory: '256Mi'
              cpu: '500m'
            limits:
              memory: '512Mi'
              cpu: '1'
---
apiVersion: v1
kind: Service
metadata:
  name: profiles-srv
spec:
  type: ClusterIP
  selector:
    app: profiles
  ports:
    - name: profiles
      protocol: TCP
      port: 5000
      targetPort: 5000
