k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt'
spec:
  tls:
    - hosts:
        - api.chatterbox.abhithube.com
      secretName: chatterbox-tls
  rules:
    - host: api.chatterbox.abhithube.com
      http:
        paths:
          - pathType: Prefix
            path: /auth
            backend:
              service:
                name: auth-svc
                port:
                  number: 80
          - pathType: Prefix
            path: /parties
            backend:
              service:
                name: messages-svc
                port:
                  number: 80
          - pathType: Prefix
            path: /messages
            backend:
              service:
                name: messages-svc
                port:
                  number: 80
          - pathType: Prefix
            path: /socket.io
            backend:
              service:
                name: messages-svc
                port:
                  number: 80
